2009-10-16 Magnus Hagdorn
 * example-drivers/eis/src/eis_ela.F90: use parameter for internal message
   buffer size
 * example-drivers/eis/src/eis_slc.F90: ditto
 * example-drivers/eis/src/eis_temp.F90: ditto
 * libglide/glimmer_ncio.F90: ditto

2009-10-16 Magnus Hagdorn
 * libglide/glide.F90: use derivative module
 * libglide/glide_thck.F90: ditto, remove old code

2009-10-16 Magnus Hagdorn
 * libglimmer/glimmer_deriv.F90: slight clean up, reformat comments to 
   doxygen
 * libglimmer/unittest_glimmer_deriv.F90: updated copyright notice
 * libglimmer/xls.F90: ditto

2009-10-16 Magnus Hagdorn
 * libglimmer/unittest_glimmer_deriv.F90: fix indentation
 * libglimmer/glimmer_deriv.F90: ditto
 * libglimmer/xls.F90: ditto

2009-10-16 Magnus Hagdorn
 * libglimmer/unittest_glimmer_deriv.F90: copied from lanl branch, renamed 
   name space
 * libglimmer/glimmer_deriv.F90: ditto
 * libglimmer/xls.F90: copied from lanl
 * libglimmer/Makefile.am: add glimmer_deriv.F90 to libglimmer

2009-10-15 Magnus Hagdorn
 * libglide/Makefile.am: fix out-of-dir build bugs

2009-10-15 Magnus Hagdorn
 * example-drivers/EISMINT-3/EISMINT-3/EISMINT3GL.input.nc: make CF compliant
 * example-drivers/eis/fenscan/europe.20km.nc: ditto
 * tests/EISMINT/EISMINT-2/mound.nc: ditto
 * tests/EISMINT/EISMINT-2/trough.nc: ditto

2009-10-14 Magnus Hagdorn
 * libglide/glide_lithot_vars.def: new variable definition file for lithot
   variables
 * libglide/Makefile.am: add new file
 * libglide/glide.F90: optionally handle lithot I/O
 * libglide/glide_stop.F90: ditto
 * libglide/glide_vars.def: take out lithot variables, fix standard name of
   of wvel variable
 * libglide/glimmer_ncio.F90: bump convention to 1.4
 * scripts/generate_ncvars.py: only output coordinate attribute if mapping
   is available

2009-10-14 Magnus Hagdorn
 * libglide/glide_nc_custom.F90: handle coordinate values
 * libglide/glide_types.F90: add arrays for storing coordinate values